--- a/apcs-create-task/index.html
+++ b/apcs-create-task/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Book Inventory</title>
+  <link rel="stylesheet" href="styles/style.css" />
+</head>
+
+<body class="books">
+  <h1 class="title">Books Available</h1>
+  <div class="buttons">
+    <button class="btn" id="search">Search</button>
+    <button class="btn" id="go-back">Go Back</button>
+    <button class="btn" id="show-book">Show Book/button>
+  </div>
+  <div id="Display"></div>
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
