--- a/apcs-create-task/index.html
+++ b/apcs-create-task/index.html
@@ -10,14 +10,15 @@
 </head>
 
 <body class="books">
-  <h1 class="title">Books Available</h1>
-  <div class="buttons">
-    <button class="btn" id="search">Search</button>
-    <button class="btn" id="go-back">Go Back</button>
-    <button class="btn" id="show-book">Show Book/button>
-  </div>
-  <div id="Display"></div>
-  <script type="module" src="/main.js"></script>
+  <div id="Display">
+    <h1 class="title">What Book Would You Like to Read?</h1>
+    <div class="buttons">
+      <button class="btn" id="search">Search</button>
+      <button class="btn" id="go-back">Go Back</button>
+      <button class="btn" id="show-book">Show Book</button>
+    </div>
+    <div id="Display"></div>
+    <script type="module" src="/main.js"></script>
 </body>
 
 </html>
