--- a/apcs-create-task/index.html
+++ b/apcs-create-task/index.html
@@ -31,7 +31,7 @@
           </div>
           <div id="Display"></div>
     </section>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 
 </html>
