--- a/apcs-create-task-old/index.html
+++ b/apcs-create-task-old/index.html
@@ -17,7 +17,11 @@
         <div class="form-inputs">
           <div class="form-input">
             <label for="title">Book Name</label>
-            <input type="text" id="title" class="text-box" value="Ray" required>
+            <input type="text" id="title" class="text-box" required>
+          </div>
+          <div class="form-input">
+            <label for="author">Author</label>
+            <input type="author" id="Author" class="text-box" required>
           </div>
 
           <div class="buttons">
