--- a/apcs-create-task/index.html
+++ b/apcs-create-task/index.html
@@ -10,22 +10,24 @@
 </head>
 
 <body class="books">
-  <div id="Display">
+  <div id="main-display">
     <h1 class="title">What Book Would You Like to Read?</h1>
     <section class="form-parent">
-      <form id="form">
+      <!-- <form id="form"> -->
         <div class="form-inputs">
           <div class="form-input">
             <label for="title">Book Name</label>
-            <input type="text" id="title" class="text-box" value="Ray" required>
+            <input type="text" id="title" class="text-box" required>
           </div>
 
           <div class="buttons">
             <button class="btn" id="search">Search</button>
             <button class="btn" id="go-back">Go Back</button>
-            <button class="btn" id="show-book">Show Book</button>
+            <button class="btn" id="show-searches">Show Searches</button>
           </div>
-          <div id="Display"></div>
+          <div id="display"></div>
+        </div>
+      <!-- </form> -->
     </section>
     <script type="module" src="js/main.js"></script>
 </body>
